# picsellia-cv-pipelines

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
legacy/old_models/: rebuild_all_base.sh  rebuild_all_test.sh  rebuild_latest.sh
legacy/old_models/ViT-classification/experiment/: utils.py
legacy/old_models/ViT_classification/: Dockerfile  requirements.txt
legacy/old_models/ViT_classification/experiment/: trainer.py  utils.py
legacy/old_models/ViT_detection/: Dockerfile  requirements.txt
legacy/old_models/ViT_detection/experiment/: helpers.py  main.py
legacy/old_models/abstract_trainer/: trainer.py  yolov8_trainer.py
legacy/old_models/core_utils/: picsellia_utils.py  yolov8.py
legacy/old_models/evaluator/: abstract_evaluator.py  tf_evaluator.py  yolo_evaluator.py
legacy/old_models/evaluator/utils/: tf.py
legacy/old_models/keras-classification/: Dockerfile  requirements.in
legacy/old_models/keras_classification/: Dockerfile  requirements.txt
legacy/old_models/keras_classification/experiment/: main.py  utils.py
legacy/old_models/tf2/: Dockerfile  requirements.in  requirements.txt  setup.sh
legacy/old_models/tf2/experiment/: main.py  pxl_tf.py  pxl_utils.py
legacy/old_models/unet_instance_segmentation/: Dockerfile  unet-training-picsellia.ipynb
legacy/old_models/unet_instance_segmentation/experiment/: trainer.py  utils.py
legacy/old_models/yolov5-detection/: requirements.txt
legacy/old_models/yolov5_detection/: Dockerfile  requirements.in
legacy/old_models/yolov5_detection/experiment/: main.py  picsellia_utils.py
legacy/old_models/yolov5_segmentation/: Dockerfile
legacy/old_models/yolov5_segmentation/experiment/: main.py
legacy/old_models/yolov8_classification/: tests.py
legacy/old_models/yolov8_detection/: requirements.txt
legacy/old_models/yolov8_detection/experiment/: detection_trainer.py
legacy/old_models/yolov8_segmentation/: requirements.in  requirements.txt
legacy/old_models/yolov8_segmentation/experiment/: segmentation_trainer.py
legacy/old_models/yolox_detection/: Dockerfile  requirements.txt
legacy/old_models/yolox_detection/experiment/: main.py  test_augmentations.py  utils.py
legacy/old_processings/: build_images.sh
legacy/old_processings/dataset/data_augmentations/: requirements.txt
legacy/old_processings/dataset/tf/: launch_processing.py
legacy/old_processings/dataset/yolox/: launch_processing.py  main.py  requirements.txt
legacy/old_processings/docker/: Dockerfile.imgaug_rotation  Dockerfile.mask  Dockerfile.rotate  Dockerfile.tensorflow  Dockerfile.yolov8  Dockerfile.yolox
legacy/old_processings/evaluator/: abstract_evaluator.py  framework_formatter.py  yolo_evaluator.py
legacy/old_processings/experiment/: Dockerfile.tensorflow  Dockerfile.yolov8  build_images.sh
legacy/old_processings/experiment/tf/: launch_processing.py
legacy/old_processings/utils/: annotator.py
legacy/old_processings/utils/yolo/: annotator.py
pipelines/albumentations_processing/: Dockerfile  config.toml  local_pipeline.py  picsellia_pipeline.py  pyproject.toml  steps.py
pipelines/albumentations_processing/utils/: parameters.py  processing.py
pipelines/augmentations_pipeline/: Dockerfile  process_dataset.py  processing_pipeline.py  requirements.txt
pipelines/bounding_box_cropper/: Dockerfile  config.toml  local_pipeline.py  local_processing_pipeline.py  picsellia_pipeline.py  processing_pipeline.py
pipelines/clip/training/: .dockerignore  Dockerfile  config.toml  local_pipeline.py  picsellia_pipeline.py  pyproject.toml  run_clip.py  steps.py
pipelines/clip/training/utils/: data.py  evaluation.py  parameters.py
pipelines/datalake_autotagging/: Dockerfile  create_datalake_autotagging_processing.py  launch_datalake_autotagging_processing.py  local_processing_pipeline.py  processing_pipeline.py
pipelines/dataset_tiler/: Dockerfile  config.toml  local_pipeline.py  local_processing_pipeline.py  picsellia_pipeline.py  processing_pipeline.py
pipelines/diversified_dataset_extractor/: Dockerfile  config.toml  picsellia_pipeline.py  processing_pipeline.py
pipelines/grounding_dino/: .dockerignore  Dockerfile  config.toml  local_pipeline.py  picsellia_pipeline.py  pyproject.toml  requirements.txt  steps.py
pipelines/grounding_dino/runs/run7/: run_config.toml
pipelines/grounding_dino/utils/: parameters.py  processing.py
pipelines/mask_cropper/: .dockerignore  Dockerfile  config.toml  local_pipeline.py  picsellia_pipeline.py  pyproject.toml  steps.py
pipelines/mask_cropper/utils/: parameters.py  processing.py
pipelines/paddle_ocr/: .dockerignore  Dockerfile  config.toml  local_pipeline.py  local_training_pipeline.py  training_pipeline.py
pipelines/sam2/training/: Dockerfile  config.toml  local_pipeline.py  pyproject.toml  steps.py
pipelines/sam_2/fine_tuning/: Dockerfile  config.toml  local_pipeline.py  picsellia_pipeline.py  pyproject.toml  steps.py  train.py  train.yaml
pipelines/sam_2/fine_tuning/utils/: parameters.py  sam2_utils.py
pipelines/training_grounding_dino/: .dockerignore  Dockerfile  config.toml  local_pipeline.py  picsellia_pipeline.py  pyproject.toml  steps.py  train.sh
pipelines/yolov7_segmentation/: Dockerfile  config.toml  local_training_pipeline.py  requirements.in  training_pipeline.py
pipelines/yolov8/fast_training/: Dockerfile  config.toml  local_pipeline.py  picsellia_pipeline.py  pipeline.py  requirements.txt
pipelines/yolov8/pre_annotation/: .dockerignore  Dockerfile  config.toml  local_pipeline.py  local_processing_pipeline.py  picsellia_pipeline.py  processing_pipeline.py  requirements.in  requirements.txt
pipelines/yolov8/training/: Dockerfile  local_pipeline.py  picsellia_pipeline.py  pipeline.py  requirements.txt  steps.py
pipelines/yolov8_classification/: Dockerfile  local_evaluation_pipeline.py  local_training_pipeline.py  requirements.in  training_pipeline.py
pipelines/yolov8_preannotation/: Dockerfile  local_processing_pipeline.py  processing_pipeline.py  requirements.in
scripts/: build_and_push_legacy.sh  build_and_push_pipelines.sh
(+179 files in other folders)
