[project]
name = "picsellia-cv-pipelines"
version = "0.1.0"
description = ""
authors = [
    {name = "SoniaGrh", email = "sonia.garrouch@hotmail.fr"}
]
dependencies = [
    "picsellia>=6.21.0,<7.0.0",
    "picsellia-pipelines-cli",
    "picsellia-cv-engine",
]
requires-python = ">=3.10,<3.14"
readme = "README.md"


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
]
