[project]
name = "albumentations_processing"
version = "0.1.0"
description = "Picsellia processing pipeline"
requires-python = ">=3.10"

dependencies = [
    "picsellia-pipelines-cli",
    "albumentations",
    "opencv-python"
]

[dependency-groups]
dev = [
    "picsellia-cv-engine",
]

[tool.uv.sources]
picsellia-cv-engine = { git = "https://github.com/picselliahq/picsellia-cv-engine.git", rev = "main" }
picsellia-pipelines-cli = { git = "https://github.com/picselliahq/picsellia-pipelines-cli.git", rev = "main" }

