[project]
name = "training"
version = "0.1.0"
description = "YoloV8 training pipeline"
requires-python = ">=3.10"

dependencies = [
    "picsellia-pipelines-cli",
    "torch==2.5.1",
    "torchvision>=0.20.1",
    "numpy>=1.24.4",
    "tqdm>=4.66.1",
    "hydra-core>=1.3.2",
    "iopath>=0.1.10",
    "pillow>=9.4.0",
    "submitit",
    "tensordict==0.5",
    "tensorboard",
    "fvcore",
    "supervision",
    "sam-2",
]

[dependency-groups]
dev = [
    "picsellia-cv-engine",
]

[tool.uv.sources]
sam-2 = { git = "https://github.com/facebookresearch/sam2" }
